--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         <input type="file" name="image" id="imageUpload" accept=".png, .jpg, .jpeg">
                         <div class="select-wrapper">
                             <select onchange="handleModelChange()" id='model-selector'>
-                                <option value="/static/models_version2/vit_b16_non_quant_tfjs/model.json" selected> ViT with no quantization</option>
-                                <option value="/static/models_version2/vit_b16_quant_float16_tfjs/model.json"> ViT with float16 quantization</option>
-                                <option value="/static/models_version2/vit_b16_quant_uint8_tfjs/model.json"> ViT with uint8 quantization</option>
-                                <option value="/static/models_version2/resnet50_non_quant_tfjs/model.json"> ResNet 50 with no quantization</option>
-                                <option value="/static/models_version2/resnet50_quant_float16_tfjs/model.json"> ResNet 50 with float16 quantization</option>
-                                <option value="/static/models_version2/resnet50_quant_uint8_tfjs/model.json"> ResNet 50 with uint8 quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/vit_b16_non_quant_tfjs/model.json" selected> ViT with no quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/vit_b16_quant_float16_tfjs/model.json"> ViT with float16 quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/vit_b16_quant_uint8_tfjs/model.json"> ViT with uint8 quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/resnet50_non_quant_tfjs/model.json"> ResNet 50 with no quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/resnet50_quant_float16_tfjs/model.json"> ResNet 50 with float16 quantization</option>
+                                <option value="https://joey155.github.io/COMS_6998_Practical_DL_proj/static/models_version2/resnet50_quant_uint8_tfjs/model.json"> ResNet 50 with uint8 quantization</option>
                             </select>
                         </div>
                     </form>
